Add a few Java JVM options to build in projectSettings